--- a/Smartwyre.DeveloperTest.Runner/Smartwyre.DeveloperTest.Runner.csproj
+++ b/Smartwyre.DeveloperTest.Runner/Smartwyre.DeveloperTest.Runner.csproj
@@ -5,4 +5,12 @@
 	<TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Smartwyre.DeveloperTest\Smartwyre.DeveloperTest.csproj" />
+  </ItemGroup>
+
 </Project>
